Fix formatting to prettier style
Refer to If9aae2087c3299ae5d54728cd17d86c2b0dcb8a0 for details
on the implementation.

Signed-off-by: Thanh Ha <zxiiro@gmail.com>
Change-Id: If845d7ecf8ee229bdd2407038cfe6bb0e2a9194f

--- a/.jjb-test/lf-release-jobs.yaml
+++ b/.jjb-test/lf-release-jobs.yaml
@@ -1,8 +1,8 @@
 ---
 - project:
-    name: '{project-name}-release'
+    name: "{project-name}-release"
     jobs:
-      - '{project-name}-gerrit-release-jobs'
+      - "{project-name}-gerrit-release-jobs"
 
     project: self-release/project
     project-name: self-release-project
