--- a/jjb/lf-release-jobs.yaml
+++ b/jjb/lf-release-jobs.yaml
@@ -20,14 +20,14 @@
 
     gerrit_trigger_file_paths:
       - compare-type: ANT
-        pattern: 'releases/*.yaml'
+        pattern: "releases/*.yaml"
 
     #####################
     # Job Configuration #
     #####################
 
     project-type: freestyle
-    node: '{build-node}'
+    node: "{build-node}"
 
     properties:
       - lf-infra-properties:
@@ -35,14 +35,14 @@
 
     parameters:
       - lf-infra-parameters:
-          project: '{project}'
-          branch: 'master'
-          stream: '{stream}'
+          project: "{project}"
+          branch: "master"
+          stream: "{stream}"
 
     wrappers:
       - lf-infra-wrappers:
-          build-timeout: '{build-timeout}'
-          jenkins-ssh-credential: '{jenkins-ssh-credential}'
+          build-timeout: "{build-timeout}"
+          jenkins-ssh-credential: "{jenkins-ssh-credential}"
 
     publishers:
       - lf-infra-publish
@@ -63,8 +63,8 @@
     build-days-to-keep: 7
     build-timeout: 15
     disable-job: false
-    git-url: '$GIT_URL/$PROJECT'
-    project-pattern: '**'
+    git-url: "$GIT_URL/$PROJECT"
+    project-pattern: "**"
     gerrit-skip-vote: false
 
     gerrit_verify_triggers:
@@ -76,12 +76,11 @@
       - comment-added-contains-event:
           comment-contains-value: '^Patch Set[ ]+[0-9]+:([ ]+|[\n]+)(recheck|reverify)$'
 
-
     #####################
     # Job Configuration #
     #####################
 
-    disabled: '{disable-job}'
+    disabled: "{disable-job}"
 
     builders:
       - lf-infra-pre-build
@@ -98,7 +97,7 @@
       - lf-release
 
 - job-template:
-    name: '{project-name}-release-verify-{stream}'
+    name: "{project-name}-release-verify-{stream}"
     id: gerrit-release-verify
     <<: *lf_release_common
     # yamllint disable-line rule:key-duplicates
@@ -106,32 +105,31 @@
 
     scm:
       - lf-infra-gerrit-scm:
-          git-url: '{git-url}'
-          refspec: '$GERRIT_REFSPEC'
-          branch: 'master'
+          git-url: "{git-url}"
+          refspec: "$GERRIT_REFSPEC"
+          branch: "master"
           submodule-disable: true
           submodule-recursive: false
           submodule-timeout: 10
           choosing-strategy: gerrit
-          jenkins-ssh-credential: '{jenkins-ssh-credential}'
+          jenkins-ssh-credential: "{jenkins-ssh-credential}"
 
     triggers:
       - gerrit:
-          server-name: '{gerrit-server-name}'
-          trigger-on: '{obj:gerrit_verify_triggers}'
+          server-name: "{gerrit-server-name}"
+          trigger-on: "{obj:gerrit_verify_triggers}"
           projects:
-            - project-compare-type: 'ANT'
-              project-pattern: '{project-pattern}'
+            - project-compare-type: "ANT"
+              project-pattern: "{project-pattern}"
               branches:
-                - branch-compare-type: 'ANT'
-                  branch-pattern: '**/master'
-              file-paths: '{obj:gerrit_trigger_file_paths}'
+                - branch-compare-type: "ANT"
+                  branch-pattern: "**/master"
+              file-paths: "{obj:gerrit_trigger_file_paths}"
           skip-vote:
-            successful: '{gerrit-skip-vote}'
-            failed: '{gerrit-skip-vote}'
-            unstable: '{gerrit-skip-vote}'
-            notbuilt: '{gerrit-skip-vote}'
-
+            successful: "{gerrit-skip-vote}"
+            failed: "{gerrit-skip-vote}"
+            unstable: "{gerrit-skip-vote}"
+            notbuilt: "{gerrit-skip-vote}"
 
 #################
 # RELEASE MERGE #
@@ -149,8 +147,8 @@
     build-days-to-keep: 7
     build-timeout: 15
     disable-job: false
-    git-url: '$GIT_URL/$PROJECT'
-    project-pattern: '**'
+    git-url: "$GIT_URL/$PROJECT"
+    project-pattern: "**"
 
     gerrit_merge_triggers:
       - change-merged-event
@@ -161,7 +159,7 @@
     # Job Configuration #
     #####################
 
-    disabled: '{disable-job}'
+    disabled: "{disable-job}"
 
     builders:
       - lf-infra-pre-build
@@ -178,7 +176,7 @@
       - lf-release
 
 - job-template:
-    name: '{project-name}-release-merge-{stream}'
+    name: "{project-name}-release-merge-{stream}"
     id: gerrit-release-merge
     <<: *lf_release_common
     # yamllint disable-line rule:key-duplicates
@@ -186,10 +184,10 @@
 
     scm:
       - lf-infra-gerrit-scm:
-          jenkins-ssh-credential: '{jenkins-ssh-credential}'
-          git-url: '{git-url}'
-          refspec: '$GERRIT_REFSPEC'
-          branch: '$GERRIT_BRANCH'
+          jenkins-ssh-credential: "{jenkins-ssh-credential}"
+          git-url: "{git-url}"
+          refspec: "$GERRIT_REFSPEC"
+          branch: "$GERRIT_BRANCH"
           submodule-disable: true
           submodule-recursive: false
           submodule-timeout: 10
@@ -197,12 +195,12 @@
 
     triggers:
       - gerrit:
-          server-name: '{gerrit-server-name}'
-          trigger-on: '{obj:gerrit_merge_triggers}'
+          server-name: "{gerrit-server-name}"
+          trigger-on: "{obj:gerrit_merge_triggers}"
           projects:
-            - project-compare-type: 'ANT'
-              project-pattern: '{project-pattern}'
+            - project-compare-type: "ANT"
+              project-pattern: "{project-pattern}"
               branches:
-                - branch-compare-type: 'ANT'
-                  branch-pattern: '**/master'
-              file-paths: '{obj:gerrit_trigger_file_paths}'
+                - branch-compare-type: "ANT"
+                  branch-pattern: "**/master"
+              file-paths: "{obj:gerrit_trigger_file_paths}"
