Add option to pass JAVA_OPTIONS
JAVA_OPTIONS are required to execute sonar jobs
Currently there is no options to pass this variable
so adding this option to pass from the project.yaml

Issue: RELENG-2152
Signed-off-by: Suresh Channamallu <schannamallu@linuxfoundation.org>
Change-Id: I0842f222fc7abf11b258b0691167b701bb319458

--- a/jjb/lf-maven-jobs.yaml
+++ b/jjb/lf-maven-jobs.yaml
@@ -1105,6 +1105,7 @@
     git-url: "$GIT_URL/$PROJECT"
     github-url: "https://github.com"
     java-version: openjdk8
+    java-opts: ""
     mvn-global-settings: global-settings
     mvn-goals: clean install
     mvn-opts: ""
@@ -1143,6 +1144,11 @@
           name: ARCHIVE_ARTIFACTS
           default: "{archive-artifacts}"
           description: Artifacts to archive to the logs server.
+      - string:
+          name: JAVA_OPTS
+          default: "{java-opts}"
+          description: |
+            Java options. Example: -Xmx1024m
       - string:
           name: SONAR_MAVEN_GOAL
           default: "{sonar-mvn-goal}"
