Add option to pass JAVA_OPTIONS
JAVA_OPTIONS are required to execute sonar jobs
Currently there is no options to pass this variable
so adding this option to pass from the project.yaml

Issue: RELENG-2152
Signed-off-by: Suresh Channamallu <schannamallu@linuxfoundation.org>
Change-Id: I0842f222fc7abf11b258b0691167b701bb319458
Signed-off-by: Suresh Channamallu <schannamallu@linuxfoundation.org>

--- a/jjb/lf-macros.yaml
+++ b/jjb/lf-macros.yaml
@@ -372,6 +372,11 @@
           description: |
             Maven parameters to pass to the mvn command.
       - string:
+          name: JAVA_OPTS
+          default: "{java-opts}"
+          description: |
+            Java opts. Example: -Xmx1024m
+      - string:
           name: MVN
           # Sets an env var for shell scripts to be able to call the dynamically
           # installed maven without having to calculate the path themselves.
